package ipc;

option java_package = "jp.physiome";
option java_outer_classname = "Ipc";

message SpaceEntry {

  required bytes id = 1;
  required string name = 2;

}

message SpaceTable {

  repeated SpaceEntry entry = 1;

}

message NameEntry {

  required string name = 1;

}

message NameTable {

  repeated NameEntry entry = 1;

}

message ScopeEntry {

  required bytes uuid = 1;
  required int32 index_at_space = 2; // index at SpaceTable
  required string label = 3;

}

message ScopeTable {

  repeated ScopeEntry entry = 1;

}

message SymbolEntry {

  required int32 gid = 1;
  required int32 index_at_name = 2; // index at NameTable
  required int32 index_at_scope = 3; // index at ScopeTable

}

message SymbolTable {

  repeated SymbolEntry entry = 1;

}

enum ModelLanguage {
  ISML = 0; // PHML
  SBML = 1;
  UNKNOWN = 2;
}

enum IntegrationMethod {
  EULER = 0;
  RUNGE_KUTTA = 1;
  ARK = 2;
}

message HeartbeatInterfaceParameter {

  required string host = 1;
  required int32 port = 2;

}

message IsdfOutput {

  required string url = 1; // this can be a URI or a file path

}

message MultivariateInterfaceParameter {

  required string url = 1; // this can be a URI or a file path

}

message OutputInterfaceParameter {

  required string path = 1;

}

message PrintInterfaceParameter {

  optional string print_format = 1 [default = "%T %N %V"];
  repeated string print_obj = 2;

}

message ProgressSocketInterfaceParameter {

  required string host = 1;
  required int32 port = 2;

}

message ModelVariable {

  required string key = 1;
  repeated string value = 2;

}

message ModelVariableTable {

  repeated string column = 1;
  repeated ModelVariable variable = 2;

}

message TimeUnit {

  required string name = 1;
  required int64 d = 2; // denominator
  required int64 n = 3; // numerator
  optional int32 id = 4;

}

message ModelPutRequest {

  required bytes body = 1;

}

message ModelPutResponse {

  enum Status {
    OK = 0;
    INVALID_REQUEST = 1;
    FILESYSTEM_ERROR = 2;
    MEMORY_ERROR = 3;
  }

  required Status status = 1;
  optional bytes error_message = 2;

  optional string url = 3;

}

message ModelProbeRequest {

  required string url = 1; // this can be a URI or a file path

}

message ModelProbeResponse {

  enum Status {
    OK = 0;
    INVALID_REQUEST = 1;
    PARSE_ERROR = 2;
    PROCESS_ERROR = 3;
    FILESYSTEM_ERROR = 4;
    MEMORY_ERROR = 5;
  }

  required Status status = 1;
  optional bytes error_message = 2;

  optional ModelLanguage language = 3;
  optional IntegrationMethod integration_method = 4;
  optional ModelVariableTable variable_table = 5;
  repeated TimeUnit time_unit = 6;
  optional string length = 7;
  optional TimeUnit length_unit = 8;
  optional string step = 9;
  optional TimeUnit step_unit = 10;
  optional int32 seed = 11;

}

message ResourceLimit {

  // the following fields came after the symbolic constants for the resource
  // argument of getrlimit() and setrlimit():
  // http://pubs.opengroup.org/onlinepubs/9699919799/basedefs/sys_resource.h.html#tag_13_57
  required int32 cpu = 1;
  required int64 fsize = 2;
  required int64 as = 3;

}

message SimulationStartRequest {

  required string host = 1;
  required int32 port = 2;

  required string url = 3; // this can be a URI or a file path

  required ModelLanguage language = 4;
  required IntegrationMethod integration_method = 5;
  required string length = 6; // in model's step unit
  required string step = 7;   // in model's step unit
  repeated string key = 8;

  optional int32 np = 9 [default = 1];
  optional int32 granularity = 10 [default = 1];
  optional bool dat = 11 [default = false];
  optional int32 debug = 12 [default = 0];
  optional string log = 13;
  optional int32 seed = 14;
  optional bool use_obj_weights = 15 [default = false];
  optional bool redundant_func = 16 [default = false];
  optional int32 zoltan_debug = 17 [default = 0];
  optional int32 num_threads = 18 [default = 1];
  optional HeartbeatInterfaceParameter heartbeat_interface_parameter = 19;
  optional MultivariateInterfaceParameter multivariate_interface_parameter = 20;
  optional OutputInterfaceParameter output_interface_parameter = 21;
  optional PrintInterfaceParameter print_interface_parameter = 22;
  optional ProgressSocketInterfaceParameter progress_socket_interface_parameter = 23;

  optional IsdfOutput isdf_output = 24;

  optional ResourceLimit resource_limit = 25;

  optional bool tracks_enabled = 26 [default = false];

}

message StartResponse {

  enum Status {
    OK = 0;
    INVALID_REQUEST = 1;
    PROCESS_ERROR = 2;
    FILESYSTEM_ERROR = 3;
    MEMORY_ERROR = 4;
  }

  required Status status = 1;
  optional bytes error_message = 2;

  optional string uuid = 3;

}

message SimulationTrack {

  // the following items have the same length
  repeated string key = 1;
  repeated string name = 2;
  repeated string scope_name = 3;
  repeated string label = 4;
  repeated int32 size = 5;

}

message SimulationCancelRequest {

  required string simulation_id = 1;

}

message SimulationCancelResponse {

  enum Status {
    OK = 0;
    INVALID_REQUEST = 1;
    PROCESS_ERROR = 2;
  }

  required Status status = 1;
  optional bytes error_message = 2;

}

message SimulationProgress {

  required int32 percentage = 1;
  repeated double value = 2;

}

message ExitNotification {

  enum Status {
    OK = 0;
    ERROR_OCCURRED = 1;
    USER_CANCEL = 2;
  }

  required Status status = 1;
  required string uuid = 2;

}

message SimulationLog {

  enum Type {
    WARNING = 1;
    INFORMATION = 2;
    DEBUG = 3;
  }

  required Type type = 1;
  required bytes body = 2;

}

message ShutdownRequest {

  enum Type {
    IMMEDIATE = 0;
    GRACEFUL = 1;
    RESTART = 2;
  }

  required Type type = 1;

}

message ShutdownResponse {

  enum Status {
    OK = 0;
    INVALID_REQUEST = 1;
  }

  required Status status = 1;

}

message SimulationProfile {

  required string simulation_id = 1;

  required int32 pid = 2;

  required int32 started_at = 3;

  required int32 percentage = 4;

}

message SimulationListRequest {

  enum Type {
    ALL = 1;
  }

  required Type type = 1;

}

message SimulationListResponse {

  enum Status {
    OK = 0;
    INVALID_REQUEST = 1;
  }

  required Status status = 1;
  repeated SimulationProfile profile = 2;

}

message ConvertStartRequest {

  required string host = 1;
  required int32 port = 2;

  required string source_url = 3;
  required string target_url = 4;

}

message PlotStartRequest {

  required string host = 1;
  required int32 port = 2;

  required string data_url = 3;
  required string output_url = 4;

}

message StripStartRequest {

  required string host = 1;
  required int32 port = 2;

  required string source_url = 3;
  required string target_url = 4;

}

message ZipStartRequest {

  required string host = 1;
  required int32 port = 2;

  required string source_url = 3;
  required string target_url = 4;

}

message Envelope {

  enum Type {
    PING_REQUEST = 1;
    PING_RESPONSE = 2;
    EXIT_NOTIFICATION = 3;
    START_RESPONSE = 4;
    MODEL_PUT_REQUEST = 5;
    MODEL_PUT_RESPONSE = 6;
    MODEL_PROBE_REQUEST = 7;
    MODEL_PROBE_RESPONSE = 8;
    SIMULATION_START_REQUEST = 9;
    SIMULATION_TRACK = 10;
    SIMULATION_CANCEL_REQUEST = 11;
    SIMULATION_CANCEL_RESPONSE = 12;
    SIMULATION_LOG = 13;
    SIMULATION_PROGRESS = 14;
    SHUTDOWN_REQUEST = 15;
    SHUTDOWN_RESPONSE = 16;
    SIMULATION_LIST_REQUEST = 17;
    SIMULATION_LIST_RESPONSE = 18;
    CONVERT_START_REQUEST = 19;
    PLOT_START_REQUEST = 20;
    STRIP_START_REQUEST = 21;
    ZIP_START_REQUEST = 22;
  }

  required Type type = 1;

  optional ExitNotification exit_notification = 2;
  optional StartResponse start_response = 3;
  optional ModelPutRequest model_put_request = 4;
  optional ModelPutResponse model_put_response = 5;
  optional ModelProbeRequest model_probe_request = 6;
  optional ModelProbeResponse model_probe_response = 7;
  optional SimulationStartRequest simulation_start_request = 8;
  optional SimulationTrack simulation_track = 9;
  optional SimulationCancelRequest simulation_cancel_request = 10;
  optional SimulationCancelResponse simulation_cancel_response = 11;
  optional SimulationLog simulation_log = 12;
  optional SimulationProgress simulation_progress = 13;
  optional ShutdownRequest shutdown_request = 14;
  optional ShutdownResponse shutdown_response = 15;
  optional SimulationListRequest simulation_list_request = 16;
  optional SimulationListResponse simulation_list_response = 17;
  optional ConvertStartRequest convert_start_request = 18;
  optional PlotStartRequest plot_start_request = 19;
  optional StripStartRequest strip_start_request = 20;
  optional ZipStartRequest zip_start_request = 21;

}
